# mlops_final_project

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  evidently_report.html  pyproject.toml  requirements.txt
.github/workflows/: pre-commit.yml
dags/.telemetry/: id.yaml
dags/history/: runs.db
dags/history/runs/: index.db
dags/schedules/: schedules.db
src/: assets.py  requirements.txt
src/api/: app.py
src/dags/: hello_dagster.py  pyproject.toml
src/dagster/: pyproject.toml
src/dagster/assets/: data_preprocessing.py  experiments.py  pipeline.py
src/dagster/dags/: data_preprocessing.py  experiments.py  hello_dagster.py  iris_job.py  iris_job_V.py  main.py
src/dagster/dockerfiles/: dagster  fastapi
src/dockerfiles/: dagster  mlflow  pytest
src/history/: runs.db
src/history/runs/: index.db
src/schedules/: schedules.db
tests/dagster/: test_dagster.py
tests/fastapi/: test_fastapi.py
