[project]
name = "mlops-final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dagster>=1.10.5",
    "evidently>=0.6.6",
    "fastapi>=0.115.11",
    "imbalanced-learn>=0.13.0",
    "loguru>=0.7.3",
    "mlflow>=2.21.0",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "shap>=0.47.0",
    "ucimlrepo>=0.0.7",
]
